--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@
 }
 
 body {
-    min-height: 100vh;
-    background: #fff;
+  min-height: 100vh;
+  background: #fff;
+}
+
+li {
+  list-style: none;
 }
