--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -1,15 +1,18 @@
+@import "../../scss/variables";
+
 .navigation {
-  position: fixed;
-  top: 20px;
-  left: 20px;
+  // position: fixed;
+  top: 0px;
+  left: 0px;
   bottom: 20px;
   width: 70px;
-  border-radius: 10px;
+  // border-radius: 0px 10px 10px 0px;
   box-sizing: initial;
-  border-left: 5px solid #4d5bf9;
-  background: #4d5bf9;
+  border-left: 5px solid $base-light-color;
+  background: $base-light-color;
   transition: width 0.5s;
   overflow-x: hidden;
+  height: 100vh;
 }
 
 .navigation.active {
@@ -22,7 +25,7 @@
   left: 0;
   width: 100%;
   padding-left: 5px;
-  padding-top: 40px;
+  padding-top: 60px;
 }
 
 .navigation ul li {
@@ -37,45 +40,45 @@
   background: #fff;
 }
 
-.navigation ul li b:nth-child(1) {
-  position: absolute;
-  top: -20px;
-  height: 20px;
-  width: 100%;
-  background: #fff;
-  display: none;
-}
+// .navigation ul li b:nth-child(1) {
+//   position: absolute;
+//   top: -20px;
+//   height: 20px;
+//   width: 100%;
+//   background: #fff;
+//   display: none;
+// }
 
-.navigation ul li b:nth-child(1)::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-bottom-right-radius: 20px;
-  background: #4d5bf9;
-}
+// .navigation ul li b:nth-child(1)::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   border-bottom-right-radius: 20px;
+//   background: $base-light-color;
+// }
 
-.navigation ul li b:nth-child(2) {
-  position: absolute;
-  bottom: -20px;
-  height: 20px;
-  width: 100%;
-  background: #fff;
-  display: none;
-}
+// .navigation ul li b:nth-child(2) {
+//   position: absolute;
+//   bottom: -20px;
+//   height: 20px;
+//   width: 100%;
+//   background: #fff;
+//   display: none;
+// }
 
-.navigation ul li b:nth-child(2)::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-top-right-radius: 20px;
-  background: #4d5bf9;
-}
+// .navigation ul li b:nth-child(2)::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   border-top-right-radius: 20px;
+//   background: $base-light-color;
+// }
 
 .navigation ul li.active b:nth-child(1),
 .navigation ul li.active b:nth-child(2) {
@@ -114,16 +117,17 @@
   padding-left: 10px;
   height: 60px;
   line-height: 60px;
-  white-space: normal;
+  white-space: nowrap;
+  z-index: 1;
 }
 
 .toggle {
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 5px;
+  left: 12px;
   width: 50px;
   height: 50px;
-  background: #4d5bf9;
+  background: $base-light-color;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
@@ -132,7 +136,7 @@
 }
 
 .toggle.active {
-  background: #ff4d89;
+  background: $base-light-color;
 }
 
 .toggle ion-icon {
